# ALG

./: .gitignore
AbstractDataTypes/: AdvancedSorters.cpp  Andrews.cpp  BinTree.cpp  BinTree.h  CMakeLists.txt  SimpleSorters.cpp  Sorter.h  main.cpp
AbstractDataTypes/sort/: Sorter.h
AbstractDataTypes/tree/: AVLGPT.cpp  BST.cpp  BST.h  BinTree.cpp  BinTree.h
Homeworks/Hw01/: CMakeLists.txt  Dockerfile  hw01.cpp  hw01.h  testhw.sh
Homeworks/Hw02/: CMakeLists.txt  ExplosiveStorage.cpp  Storage.cpp  Storage.h  initStorage.cpp  initStorage.h  storageUtils.cpp  storageUtils.h  testhw.sh
Homeworks/Hw02J/: ExplosiveStorage.java  Room.java  Storage.java  testhw.sh
Homeworks/Hw03/: CMakeLists.txt  CityBinaryTree.cpp  CityBinaryTree.h  TrainSystem.cpp  TrainSystem.h  testhw.sh
Homeworks/Hw03J/: testhw.sh
Homeworks/Hw03J/alg/: Main.java  RailwayPlacer.java  Town.java  TrainSystem.java  TrainSystemBuilder.java
Homeworks/Hw04/: CMakeLists.txt  GameField.cpp  GameField.h  gptLinks.txt  joe.cpp  joe.h  priorityQueueTutorial  testBotAlg.py  testhw.sh  tmp
Homeworks/Hw06/: CMakeLists.txt  avlTreeSolver.cpp  avlTreeSolver.h  lazyAvlTreeUtil.cpp  lazyAvlTreeUtil.h  testhw.sh
Homeworks/Hw07/: CMakeLists.txt  Simulator.cpp  recursiveSolver.cpp  recursiveSolver.h  simulator.h
Homeworks/Hw08/: CMakeLists.txt  garden.cpp  garden.h  gardenPlanner.cpp  testhw.sh
Homeworks/Hw08.02/: CMakeLists.txt  garden.cpp  garden.h  gardenPlanner.cpp  testhw.sh
Labs/Lab01/: CMakeLists.txt  Lab_exercises01.cpp
Labs/lab03/: CMakeLists.txt  printer.cpp
zkouska/: CMakeLists.txt  frog.cpp  frog.h  main.cpp  testhw.sh
zkouska3/: Birds.cpp  Birds.h  CMakeLists.txt  main.cpp  testhw.sh
